<resources>
    <string name="app_name">MyFirstMobileApplication</string>
    <string name="login_page">login page</string>
    <string name="user_name">user name</string>
    <string name="password">password</string>
    <string name="review_of_image">review of image</string>
    <string name="login">login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="there_are_many_variations_of_passages">There are many variations of passages</string>
    <string name="title_activity_register2">RegisterActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="there_are_many_variations_of_passages_of_lorem_ipsum_available">There are many variations of passages of Lorem Ipsum Available</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_mobile_number">Email/Mobile Number</string>
    <string name="Password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="my_checkbox">My Checkbox</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="already_have_an_account_signin">Already have an account? Signin</string>
    <string name="signin">SignIn</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account_login">Already have an Account? Login</string>
</resources>