<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:gravity="center_horizontal"
    android:layout_marginHorizontal="20dp"
    android:orientation="vertical" >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/img_1"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp">

    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/there_are_many_variations_of_passages_of_lorem_ipsum_available"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:layout_marginTop="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:layout_marginTop="30dp"
        android:textColor="@color/grey"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"
        android:layout_marginTop="30dp"
        android:textColor="@color/grey"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:layout_marginTop="30dp"
        android:textColor="@color/grey"

        />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I agree to the Terms of service & Privacy Policy"
        android:textColor="@color/blue"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:checked="false"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="SignUp"
        android:layout_marginTop="30sp"
        android:textColor="@color/white"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/already_have_an_account_signin"
        android:layout_marginTop="40dp"
        android:textColor="@color/blue"/>







</androidx.appcompat.widget.LinearLayoutCompat>